Responsiveness issues on certain pages which cause horizontal scroll. Later gets fixed of come from different page

--- a/src/screens/dashboard/sections/transactions/components/myDatePicker.css
+++ b/src/screens/dashboard/sections/transactions/components/myDatePicker.css
@@ -1,19 +1,19 @@
 .react-datepicker {
-  font-size: 1.3rem !important;
+  font-size: 1.1rem !important;
 }
 
 .react-datepicker__current-month {
-  font-size: 1.5rem !important;
+  font-size: 1.1rem !important;
 }
 
 .react-datepicker__header {
-  padding-top: 6px !important;
+  padding-top: 4px !important;
 }
 
 .react-datepicker__navigation {
-  top: 13px !important;
+  top: 11px !important;
 }
 
 .react-datepicker__day-name, .react-datepicker__day {
-  margin: 0.5rem !important;
+  margin: 0.2rem !important;
 }
